Change default game mode from survival to creative in server.properties

--- a/server.properties
+++ b/server.properties
@@ -2,7 +2,7 @@ server-name=Dedicated Server
 # Used as the server name
 # Allowed values: Any string without semicolon symbol.
 
-gamemode=survival
+gamemode=creative
 # Sets the game mode for new players.
 # Allowed values: "survival", "creative", or "adventure"
 
