--- a/server.properties
+++ b/server.properties
@@ -2,7 +2,7 @@ server-name=Dedicated Server
 # Used as the server name
 # Allowed values: Any string without semicolon symbol.
 
-gamemode=creative
+gamemode=1
 # Sets the game mode for new players.
 # Allowed values: "survival", "creative", or "adventure"
 
@@ -20,7 +20,7 @@ difficulty=easy
 # Sets the difficulty of the world.
 # Allowed values: "peaceful", "easy", "normal", or "hard"
 
-allow-cheats=false
+allow-cheats=true
 # If true then cheats like commands can be used.
 # Allowed values: "true" or "false"
 
@@ -76,7 +76,7 @@ level-seed=
 # Use to randomize the world
 # Allowed values: Any string
 
-default-player-permission-level=member
+default-player-permission-level=operator
 # Permission level for new players joining for the first time.
 # Allowed values: "visitor", "member", "operator"
 
