Update server.properties: Enable cheats and set operator permissions

--- a/server.properties
+++ b/server.properties
@@ -2,11 +2,11 @@ server-name=Dedicated Server
 # Used as the server name
 # Allowed values: Any string without semicolon symbol.
 
-gamemode=1
+gamemode=creative
 # Sets the game mode for new players.
 # Allowed values: "survival", "creative", or "adventure"
 
-force-gamemode=false
+force-gamemode=true
 # force-gamemode=false (or force-gamemode is not defined in the server.properties)
 # prevents the server from sending to the client gamemode values other
 # than the gamemode value saved by the server during world creation
