--- a/server copy.properties
+++ b/server copy.properties
@@ -6,7 +6,7 @@ gamemode=creative
 # Sets the game mode for new players.
 # Allowed values: "survival", "creative", or "adventure"
 
-force-gamemode=false
+force-gamemode=true
 # force-gamemode=false (or force-gamemode is not defined in the server.properties)
 # prevents the server from sending to the client gamemode values other
 # than the gamemode value saved by the server during world creation
@@ -20,7 +20,7 @@ difficulty=easy
 # Sets the difficulty of the world.
 # Allowed values: "peaceful", "easy", "normal", or "hard"
 
-allow-cheats=false
+allow-cheats=true
 # If true then cheats like commands can be used.
 # Allowed values: "true" or "false"
 
@@ -76,7 +76,7 @@ level-seed=
 # Use to randomize the world
 # Allowed values: Any string
 
-default-player-permission-level=member
+default-player-permission-level=operator
 # Permission level for new players joining for the first time.
 # Allowed values: "visitor", "member", "operator"
 
@@ -96,13 +96,13 @@ compression-algorithm=zlib
 # Determines the compression algorithm to use for networking
 # Allowed values: "zlib", "snappy"
 
-server-authoritative-movement=default
+server-authoritative-movement=server-auth
 # Allowed values: "client-auth", "server-auth", "server-auth-with-rewind"
 # Changes the server authority on movement:
 # "client-auth": Server has no authority and accepts all positions from the client.
 # "server-auth": Server takes user input and simulates the Player movement but accepts the Client version if there is disagreement.
 # "server-auth-with-rewind": The server will replay local user input and will push it to the Client so it can correct the position if it does not match.
-#               The clients will rewind time back to the correction time, apply the correction, then replay all the player's inputs since then. This results in smoother and more frequent corrections.
+# 		The clients will rewind time back to the correction time, apply the correction, then replay all the player's inputs since then. This results in smoother and more frequent corrections.
 player-position-acceptance-threshold=0.5
 # Only used with "server-auth-with-rewind".
 # This is the tolerance of discrepancies between the Client and Server Player position. This helps prevent sending corrections too frequently
@@ -168,9 +168,6 @@ script-debugger-auto-attach=disabled
 #script-debugger-auto-attach-timeout=0
 # Amount of time to wait at world load for debugger to attach.
 
-#script-debugger-passcode=
-# VSCode will prompt user for passcode to connect.
-
 #script-watchdog-enable=true
 # Enables the watchdog (default = true).
 
@@ -201,4 +198,5 @@ script-debugger-auto-attach=disabled
 #script-watchdog-memory-limit=250
 # Saves and shuts down the world when the combined script memory usage exceeds the given threshold (in megabytes).
 # Setting this value to 0 disables the limit. (default = 250, max = 2000)
+
 
