--- a/server.properties
+++ b/server.properties
@@ -1,4 +1,4 @@
-server-name=Dedicated Server
+server-name=PC Magik Server Minecraft
 # Used as the server name
 # Allowed values: Any string without semicolon symbol.
 
@@ -20,15 +20,15 @@ difficulty=easy
 # Sets the difficulty of the world.
 # Allowed values: "peaceful", "easy", "normal", or "hard"
 
-allow-cheats=false
+allow-cheats=true
 # If true then cheats like commands can be used.
 # Allowed values: "true" or "false"
 
-max-players=10
+max-players=999
 # The maximum number of players that can play on the server.
 # Allowed values: Any positive integer
 
-online-mode=true
+online-mode=false
 # If true then all connected players must be authenticated to Xbox Live.
 # Clients connecting to remote (non-LAN) servers will always require Xbox Live authentication regardless of this setting.
 # If the server accepts connections from the Internet, then it's highly recommended to enable online-mode.
@@ -76,7 +76,7 @@ level-seed=
 # Use to randomize the world
 # Allowed values: Any string
 
-default-player-permission-level=member
+default-player-permission-level=operator
 # Permission level for new players joining for the first time.
 # Allowed values: "visitor", "member", "operator"
 
