--- a/server.properties
+++ b/server.properties
@@ -2,7 +2,7 @@ server-name=PC Magik Server Minecraft
 # Used as the server name
 # Allowed values: Any string without semicolon symbol.
 
-gamemode=creative
+gamemode=survival
 # Sets the game mode for new players.
 # Allowed values: "survival", "creative", or "adventure"
 
